# db_internship

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
core/: config.py
database/: db.py
models/: __init__.py  author.py  book.py  buy.py  buy_book.py  buy_step.py  city.py  client.py  genre.py  step.py
src/alembic/: env.py
src/alembic/versions/: a74eeb25cdfb_create_all_tables.py
src/core/: config.py
src/database/: db.py
src/models/: __init__.py  author.py  book.py  buy.py  buy_book.py  buy_step.py  city.py  client.py  genre.py  step.py
